# Recipemgt

./: CMakeLists.txt  README.md  RecipeStudio.pro  loginwindow.cpp  main.cpp  mainwindow.cpp  recipecard.cpp  recipedetailwindow.cpp  recipemanager.cpp  splashscreen.cpp
build-mingw/: CMakeCache.txt
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-ninja/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-ninja/RecipeStudio_autogen/: deps
build-ninja/RecipeStudio_autogen/6YEA5652QU/: moc_addrecipedialog.cpp.d  moc_loginwindow.cpp.d  moc_mainwindow.cpp.d  moc_recipecard.cpp.d  moc_recipedetailwindow.cpp  moc_recipedetailwindow.cpp.d  moc_splashscreen.cpp  moc_splashscreen.cpp.d
include/: addrecipedialog.h  authentication.h  filehandler.h  loginwindow.h  mainwindow.h  recipe.h  recipecard.h  recipedetailwindow.h  recipemanager.h  splashscreen.h  styles.h  uihelpers.h  user.h
src/: CMakeLists.txt  RecipeStudio.pro  addrecipedialog.cpp  authentication.cpp  filehandler.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  recipe.cpp  recipecard.cpp  recipedetailwindow.cpp  recipemanager.cpp  user.cpp
